--- a/src/app/prs/user/user-list/user-list.component.html
+++ b/src/app/prs/user/user-list/user-list.component.html
@@ -1,36 +1,43 @@
 <div>
-    <h3>User List</h3>
+    <header>
+        <app-menu />
+        <span id="component-title">User List</span>
+        <span> | </span>
+        <span> <a routerLink="/user/create">Create New</a></span>
+    </header>
+        <main>
+            <table class="table table-sm table-striped">
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Last Name</th>
+                        <th>First Name</th>
+                        <th>Username</th>
+                        <th>Phone</th>
+                        <th>Email</th>
+                        <th>Reviewer?</th>
+                        <th>Admin?</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
 
-    <main>
-        <a routerLink="/user/create">Create New</a>
-        <table class="table table-sm table-striped">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Last Name</th>
-                    <th>First Name</th>
-                    <th>Username</th>
-                    <th>Phone</th>
-                    <th>Email</th>
-                    <th>Reviewer?</th>
-                    <th>Admin?</th>
-                    <th>Actions</th>
+                <tbody>
+                    <tr *ngFor="let user of users">
+                    <td>{{ user.id }}</td>
+                    <td>{{ user.lastName }}</td>
+                    <td>{{ user.firstName }}</td>
+                    <td>{{ user.username }}</td>
+                    <td>{{ user.phone }}</td>
+                    <td>{{ user.email }}</td>
+                    <td>{{ user.isReviewer ? "Yes" : "No" }}</td>
+                    <td>{{ user.isAdmin ? "Yes" : "No" }}</td>
+                    <td>
+                        <a routerLink="/user/view/{{ user.id }}">View</a>
+                        <span> | </span>
+                        <a routerLink="/user/change/{{ user.id }}">Change</a>
+                    </td>
                 </tr>
-            </thead>
-            <tbody><tr *ngFor="let user of users">
-                <td>{{ user.id }}</td>>
-                <td>{{ user.lastName }}</td>>
-                <td>{{ user.firstName }}</td>>
-                <td>{{ user.username }}</td>>
-                <td>{{ user.phone }}</td>>
-                <td>{{ user.email }}</td>>
-                <td>{{ user.isReviewer ? "Yes" : "No" }}</td>>
-                <td>{{ user.isAdmin ? "Yes" : "No" }}</td>>
-                <td>
-                    <a routerLink="/user/view/{{ user.id}}">View</a>
-                    <span> | </span>
-                </td>
-            </tr></tbody>
+            </tbody>
         </table>
     </main>
 </div>
