--- a/src/app/prs/request/request-create/request-create.component.html
+++ b/src/app/prs/request/request-create/request-create.component.html
@@ -1,5 +1,6 @@
 <div>
-   <app-menu />
+   <app-menu /> 
+    <!--//*if there is an rsquig under <app-menu>, you must have the .ts file importing into the app.module and the app-routing.module. -->
    <h3>Request Create</h3>
 
    <main>
