--- a/src/app/prs/request/request-review-item/request-review-item.component.html
+++ b/src/app/prs/request/request-review-item/request-review-item.component.html
@@ -29,6 +29,7 @@
            <thead>
                <tr>
                    <th>Id</th>
+                   <th>Request Id</th>
                    <th>Product</th>
                    <th>Quantity</th>
                    <th>Price</th>
